crates/mir/tests/fixtures/errors/borrowck_overlapping_mut.fe
pub fn borrowck_overlapping_mut() {
    let mut x: u256 = 0
    let p: mut u256 = mut x
    let q: mut u256 = mut x
    p = 1
    q = 2
}
